<resources>
    <string name="app_name">FireMilitary</string>

    <string name="tuijian">推荐</string>
    <string name="quanzi">圈子</string>
    <string name="shipin">视频</string>
    <string name="wode">我的</string>
    <string name="before_login_message">登陆后有更多惊喜等着你</string>
    <string name="discuss">讨论</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="zhihuibu">指挥部</string>
    <string name="mine_message">我的消息</string>
    <string name="set">设置</string>
    <string name="mine_collection">我的收藏</string>
    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_pass">忘记密码</string>
    <string name="weixin">微信</string>
    <string name="qq">腾讯QQ</string>
    <string name="weibo">新浪微博</string>
    <string name="other_login_message">您还可以使用以下账号登陆</string>
    <string name="password">密码</string>
    <string name="user_name_hint">昵称/手机号/鼎盛论坛账号</string>
    <string name="message_call_me">\@我的</string>
    <string name="chat">聊天</string>
    <string name="newfans">新粉丝</string>
    <string name="praise">赞</string>
    <string name="comment">评论</string>
    <string name="system_set">系统设置</string>
    <string name="system_text_size">字体大小</string>
    <string name="inform_set">通知设置</string>
    <string name="clear_cache">清理缓存</string>
    <string name="no_pic_mode">无图模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="offline_read">离线阅读</string>
    <string name="others">其它</string>
    <string name="about_us">关于我们</string>
    <string name="new_version_check">新版本检测</string>
    <string name="feedback">意见反馈</string>
    <string name="fenghuo_camp">烽火营</string>
    <string name="rings">圈子</string>
    <string name="reply">回复</string>
    <string name="video_player">视频</string>
    <string name="repeat_password">重复密码</string>
    <string name="nickname">昵称</string>

</resources>
