<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundLight"
    android:orientation="vertical"
    tools:context="phone1000.com.firemilitary.Activity.MineLogin.SetActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="10dp">
        <TextView
            android:id="@+id/set_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/nav_back"
            android:background="@drawable/item_clicked"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:text="@string/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/colorText"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/system_set"/>
    <RelativeLayout
        android:id="@+id/system_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@color/colorWhite"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/system_text_size"/>
        <TextView
            android:id="@+id/system_text_size_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorText" />
    </RelativeLayout>
    <Button
        android:id="@+id/inform_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:text="@string/inform_set"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/list_icon" />
    <RelativeLayout
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:clickable="true"
        android:background="@drawable/item_clicked"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/clear_cache"/>
        <TextView
            android:id="@+id/system_cache_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorText"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/night_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="3dp"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/night_mode"
            android:layout_centerVertical="true" />
        <Switch
            android:id="@+id/switch_night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorText"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/no_pic_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="3dp"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/no_pic_mode"
            android:layout_centerVertical="true" />
        <Switch
            android:id="@+id/switch_no_pic_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorText"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/off_line_read_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="3dp"
        android:text="@string/offline_read"
        android:padding="10dp"
        android:textColor="@color/colorText"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/others"/>
    <TextView
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="3dp"
        android:text="@string/about_us"
        android:padding="10dp"
        android:textColor="@color/colorText"/>
    <TextView
        android:id="@+id/new_version_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="3dp"
        android:text="@string/new_version_check"
        android:padding="10dp"
        android:textColor="@color/colorText"/>
    <TextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="3dp"
        android:text="@string/feedback"
        android:padding="10dp"
        android:textColor="@color/colorText"/>
</LinearLayout>
