<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activityBackground"
    tools:context="phone1000.com.firemilitary.Activity.MineLogin.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="10dp">
        <TextView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/nav_back"
            android:background="@drawable/item_clicked"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:text="@string/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/colorText"/>
    </RelativeLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/header_footer_top_bottom_padding"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="10dp">
        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_username"
            android:hint="@string/user_name_hint"
            android:inputType="text" />
        <EditText
            android:id="@+id/login_user_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableLeft="@drawable/login_pwd"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/register"/>
        <TextView
            android:id="@+id/login_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_clicked"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom">
        <RadioGroup
            android:id="@+id/other_login_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp">
            <RadioButton
                android:id="@+id/login_by_weixin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:drawableTop="@drawable/login_weixin"
                android:drawablePadding="10dp"
                android:text="@string/weixin"/>
            <RadioButton
                android:id="@+id/login_by_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:drawableTop="@drawable/login_qq"
                android:drawablePadding="10dp"
                android:text="@string/qq"/>
            <RadioButton
                android:id="@+id/login_by_weibo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:drawableTop="@drawable/login_weibo"
                android:drawablePadding="10dp"
                android:text="@string/weibo"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/other_login_type"
            android:text="@string/other_login_message"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>