<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activityBackgroundLight"
    tools:context="phone1000.com.firemilitary.Fragment.MineFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:text="@string/wode"
        android:textSize="@dimen/text_size_small"/>

        <RelativeLayout
            android:id="@+id/user_message_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/item_clicked"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">
            <ImageView
                android:id="@+id/user_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user_img98"/>
            <TextView
                android:id="@+id/before_login_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user_img"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorText"
                android:text="@string/before_login_message" />
            <TextView
                android:id="@+id/after_login_user_name"
                android:layout_toRightOf="@id/user_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:visibility="gone"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/after_login_user_abstract"
                android:layout_alignLeft="@id/after_login_user_name"
                android:layout_below="@id/after_login_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/list_icon"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    <LinearLayout
        android:id="@+id/after_login_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:visibility="gone"
        android:weightSum="3"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/after_login_discuss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/item_clicked"
            android:padding="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/discuss_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discuss" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/after_login_attention"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/item_clicked"
            android:padding="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/attention_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attention"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/after_login_fans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/item_clicked"
            android:padding="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/fans_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fans"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_headquarters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="@string/zhihuibu"
        android:gravity="left|center_vertical"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/list_icon"
        android:drawableLeft="@drawable/wode_headquarter_icon"/>
    <Button
        android:id="@+id/login_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="1dp"
        android:padding="16dp"
        android:text="@string/mine_collection"
        android:gravity="left|center_vertical"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/list_icon"
        android:drawableLeft="@drawable/wode_headquarter_icon"/>
    <Button
        android:id="@+id/login_mine_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="1dp"
        android:padding="16dp"
        android:text="@string/mine_message"
        android:gravity="left|center_vertical"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/list_icon"
        android:drawableLeft="@drawable/wode_msg"/>
    <Button
        android:id="@+id/login_mine_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_clicked"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="@string/set"
        android:gravity="left|center_vertical"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/list_icon"
        android:drawableLeft="@drawable/wode_set_icon"/>
</LinearLayout>
